--- a/Inventory/Views/Main/login.cshtml
+++ b/Inventory/Views/Main/login.cshtml
@@ -8,58 +8,72 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Inventory Login</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js" type="text/javascript"></script>
-
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
-    
-    <link href="~/css/login.css" rel="stylesheet" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
-
-</head>
+    <title>Login</title>
+ </head>
 
 <body>
+<style>
+body {
+  background: rgb(226, 226, 226);
+}
 
-    <div id="warp">
-        Inventory Management System
-       
-        <form method="post" action="Main/login" id="formu">
-            <div class="admin">
-                <div class="rota">
-                    <h1>Inventory</h1>
-                   
-                    <input id="username" type="text" name="email" value="" placeholder="Username" /><br />
-                    <input id="password" type="password" name="password" value="" placeholder="Password" />
-                </div>
-            </div>
-            <div class="cms">
-                <div class="roti">
-                    <h1>Management</h1>
-                    <button id="valid" type="submit" name="valid">Login</button><br />
-                    <p><a href="#">Register</a> <a href="#">Forgot Password</a> <a href="#">Help</a></p>
-                </div>
-            </div>
-        </form>
+input {
+  width: 100%;
+  margin-top: 8px;
+  padding: 7px;
+  cursor: pointer;
+  border-radius: 10px;
+  background: transparent;
+  border: 1px solid #4AD489;
+}
+
+.btn1{
+  color: white;
+  width: 100%;
+  margin-top: 8px;
+  padding: 7px;
+  cursor: pointer;
+  border-radius: 10px;
+  background-color: #4AD489;
+  border: 1px solid #4AD489;
+  text-align: center;
+  text-decoration-color: white;
+}
+.login {
+  margin-top: 100px;
+  margin-right: auto;
+  margin-left: auto;
+  width: 25%;
+  background: #fff;
+  border-radius: 10px;
+  padding: 10px;
+  box-shadow: 0 20px 35px rgba(0, 0, 0, 0.1);
+}
+* {
+  margin: 0;
+  padding: 0;
+  outline: none;
+  border: none;
+  text-decoration: none;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+}
+
+</style>
+     <form method="post" action="Main/login" id="formu">
+        <div class="login">
+    <h1  style="color:#4AD489;margin-center:100%">Login</h1>
         <p style="color:red;margin-left:12%">@Session["error"]</p>
+        <div class="users1">
+                <p>Entre com as suas credencias</p>
+          <div class="per">
+           <input id="username" type="text" name="email" value="" placeholder="Username" />
+           <input  id="password" type="password" name="password" value=""  placeholder="Senha" />
+          <div class="btn">
+          <button class="btn1" id="valid" type="submit" name="valid" >Entrar</button>
     </div>
-    <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-
-
-
-    <script src="js/login.js"></script>
-
-
-    <div class="container-fluid">
-        <div class="row" style="margin-top:238px;background-color:#2D1846;height:50px;z-index:1;positon:relative;">
-            <center>
-               <br /> <h6 style="color:white">&nbsp; Copyright <i class="fa fa-copyright"></i> Inventory Management System (Designed and Developed by <a href="https://www.surajkrsoren.tk" target="_blank" id="ss" style="position:rlative;color:orange;cursor:pointer;z-inex:1">Suraj Kumar Soren</a> (SBS College Ranchi, BCA 3rd Year))</h6>
-            </center>
-        </div>
-
     </div>
-
-</body>
-
+  </div>
+    </form>
+   </body>
 </html>
