--- a/Inventory/Views/Main/Index.cshtml
+++ b/Inventory/Views/Main/Index.cshtml
@@ -81,9 +81,9 @@ table thead tr{
         <!-- partial:partials/_navbar.html -->
         <nav class="navbar default-layout col-lg-12 col-12 p-0 fixed-top d-flex flex-row">
             <div class="text-center navbar-brand-wrapper d-flex align-items-top justify-content-center">
-                <a class="navbar-brand brand-logo" href="/Main/Index">
-                    <!-- <img src="~/images/logo.svg" alt="logo" /> -->
-                </a>
+                <!-- <a class="navbar-brand brand-logo" href="/Main/Index">
+                    <img src="~/images/logo.svg" alt="logo" />
+                </a> -->
                     <a class="navbar-brand brand-logo-mini" href="/Main/Index">
                         <!-- <img src="~/images/logo-mini.svg" alt="logo" /> -->
                     </a>
@@ -165,25 +165,25 @@ table thead tr{
                     <li class="nav-item">
                         <a class="nav-link" href="/Main/PurchaseItems">
                             <i class="menu-icon mdi mdi-backup-restore"></i>
-                            <span class="menu-title">Purchase Item</span>
+                            <span class="menu-title">Comprar Produtos</span>
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/Main/AddItem">
                             <i class="menu-icon mdi mdi-chart-line"></i>
-                            <span class="menu-title">Add Items</span>
+                            <span class="menu-title">Adicionar Produtos</span>
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/main/Sells">
                             <i class="menu-icon mdi mdi-table"></i>
-                            <span class="menu-title">Sell Item</span>
+                            <span class="menu-title">Vender Produtos</span>
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/main/AddSupplier">
                             <i class="menu-icon mdi mdi-sticker"></i>
-                            <span class="menu-title">Add Suppliers</span>
+                            <span class="menu-title">Adicionar fornecedores</span>
                         </a>
                     </li>
                     <li class="nav-item">
