--- a/Inventory/Views/Main/PurchaseItems.cshtml
+++ b/Inventory/Views/Main/PurchaseItems.cshtml
@@ -15,7 +15,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Inventory</title>
+    <title>Comprar Produtos</title>
     <!-- plugins:css -->
     <link rel="stylesheet" href="~/vendors/iconfonts/mdi/css/materialdesignicons.min.css">
     <link rel="stylesheet" href="~/vendors/css/vendor.bundle.base.css">
@@ -218,91 +218,66 @@
         <!-- partial -->
         <div class="container-fluid page-body-wrapper">
             <!-- partial:partials/_sidebar.html -->
-            <nav class="sidebar sidebar-offcanvas" id="sidebar">
+             <nav class="sidebar sidebar-offcanvas" id="sidebar">
                 <ul class="nav">
                     <li class="nav-item nav-profile">
                         <div class="nav-link">
                             <div class="user-wrapper">
                                 <div class="profile-image">
-                                    <img src="~/images/faces/face1.jpg" alt="profile image">
+                                    <img src="~/images/faces/git.jpg" alt="profile image">
                                 </div>
                                 <div class="text-wrapper">
-                                    <p class="profile-name">Suraj Kr Soren</p>
+                                    <p class="profile-name">Arnaldo Tomo</p>
                                     <div>
-                                        <small class="designation text-muted">Manager</small>
+                                        <small class="designation text-muted">Gerente</small>
                                         <span class="status-indicator online"></span>
                                     </div>
                                 </div>
                             </div>
-                            <button class="btn btn-success btn-block">
+                            <!-- <button class="btn btn-success btn-block">
                                 New Project
                                 <i class="mdi mdi-plus"></i>
-                            </button>
+                            </button> -->
                         </div>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/Main/Index">
+                    <li class="nav-item" >
+                        <a class="nav-link active" href="/Main/Index">
                             <i class="menu-icon mdi mdi-television"></i>
                             <span class="menu-title">Dashboard</span>
                         </a>
                     </li>
-                  
-                    <li class="nav-item active">
-                        <a class="nav-link" href="/main/PurchaseItems">
+             
+                    <li class="nav-item">
+                        <a class="nav-link" href="/Main/PurchaseItems">
                             <i class="menu-icon mdi mdi-backup-restore"></i>
-                            <span class="menu-title">Purchase Item</span>
+                            <span class="menu-title">Comprar Produtos</span>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/Main/Additem">
+                        <a class="nav-link" href="/Main/AddItem">
                             <i class="menu-icon mdi mdi-chart-line"></i>
-                            <span class="menu-title">Add Items</span>
+                            <span class="menu-title">Adicionar Produtos</span>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/Main/Sells">
+                        <a class="nav-link" href="/main/Sells">
                             <i class="menu-icon mdi mdi-table"></i>
-                            <span class="menu-title">Sell Item</span>
+                            <span class="menu-title">Vender Produtos</span>
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/main/AddSupplier">
                             <i class="menu-icon mdi mdi-sticker"></i>
-                            <span class="menu-title">Add Suppliers</span>
+                            <span class="menu-title">Adicionar fornecedores</span>
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/main/mystock">
                             <i class="menu-icon mdi mdi-sticker"></i>
-                            <span class="menu-title">My Stocks</span>
+                            <span class="menu-title">Em Stocks</span>
                         </a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" data-toggle="collapse" href="#auth" aria-expanded="false" aria-controls="auth">
-                            <i class="menu-icon mdi mdi-restart"></i>
-                            <span class="menu-title">User Pages</span>
-                            <i class="menu-arrow"></i>
-                        </a>
-                        <div class="collapse" id="auth">
-                            <ul class="nav flex-column sub-menu">
-                                <li class="nav-item">
-                                    <a class="nav-link" href="pages/samples/blank-page.html"> Blank Page </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="pages/samples/login.html"> Login </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="pages/samples/register.html"> Register </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="pages/samples/error-404.html"> 404 </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="pages/samples/error-500.html"> 500 </a>
-                                </li>
-                            </ul>
-                        </div>
-                    </li>
+                   
                 </ul>
             </nav>
             <!-- partial -->
